in profile post alignment fixed and follow,followers div changed

--- a/accounts/static/accounts/profile.css
+++ b/accounts/static/accounts/profile.css
@@ -72,6 +72,7 @@ h3 {
     width: 100%;
     display: flex;
     height: 100%;
+    height: fit-content;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
@@ -228,7 +229,7 @@ h3 {
     display: none;
     flex-direction: column;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(150, 143, 143, 0.5);
     height: 100% !important;
     gap: 10px;
     width: 95% !important;
@@ -304,7 +305,7 @@ h3 {
 .close-followers , .close-following {
     margin: 5px 0;
     padding: 5px;
-    width: 50%;
+    width: 100%;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.1);
@@ -318,6 +319,7 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: center;
+    align-self: flex-end;
 }
 
 
